[gd_scene load_steps=23 format=3 uid="uid://c4rdgqi1se45g"]

[ext_resource type="Script" path="res://src/home.gd" id="1_6qdly"]
[ext_resource type="FontFile" uid="uid://c4148ugw6re7e" path="res://assets/fonts/Orbitron-ExtraBold.ttf" id="1_gjjl4"]
[ext_resource type="FontFile" uid="uid://o053yl5pq5lt" path="res://assets/fonts/Orbitron-SemiBold.ttf" id="1_gp78m"]
[ext_resource type="PackedScene" uid="uid://chae8rqxth3mp" path="res://src/ui/animated_button.tscn" id="3_1cpbu"]
[ext_resource type="Shader" path="res://src/button.gdshader" id="3_knrsg"]
[ext_resource type="Texture2D" uid="uid://d2js1e1ucjswg" path="res://assets/icons/solid/play-circle.svg" id="5_jqi8r"]
[ext_resource type="Texture2D" uid="uid://4pvl75qb8v1q" path="res://assets/icons/solid/times-circle.svg" id="6_jf41c"]
[ext_resource type="Texture2D" uid="uid://bvly4cyo78oj" path="res://assets/logo.png" id="8_2ncoh"]
[ext_resource type="Texture2D" uid="uid://cqx7l0h6jwibg" path="res://boards/console/assets/computer/old_computer.png" id="9_cnhpl"]
[ext_resource type="Texture2D" uid="uid://yfffgweqkvki" path="res://boards/space_invaders/assets/logo.png" id="10_no14k"]

[sub_resource type="Theme" id="Theme_g56d2"]
default_font = ExtResource("1_gp78m")
default_font_size = 40
Label/colors/font_color = Color(0, 0, 0, 1)
Label/fonts/font = ExtResource("1_gjjl4")

[sub_resource type="Gradient" id="Gradient_ex0yo"]
colors = PackedColorArray(0.18292, 0.0952, 0.68, 1, 0.39, 0.78, 0.5395, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7t0ji"]
gradient = SubResource("Gradient_ex0yo")
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v36sp"]
resource_local_to_scene = true
shader = ExtResource("3_knrsg")
shader_parameter/rest_color = Color(1, 1, 1, 1)
shader_parameter/hover = false
shader_parameter/hover_color = Color(0.837, 0.1, 0.1, 1)
shader_parameter/stripe_attenuation = 0.1
shader_parameter/stripe_slope = 2.0
shader_parameter/stripe_count = 10
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv21j"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rmcal"]
resource_local_to_scene = true
shader = ExtResource("3_knrsg")
shader_parameter/rest_color = Color(1, 1, 1, 1)
shader_parameter/hover = false
shader_parameter/hover_color = Color(0.93666, 0.938878, 0.185029, 1)
shader_parameter/stripe_attenuation = 0.2
shader_parameter/stripe_slope = 2.0
shader_parameter/stripe_count = 10
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2nyi"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tdt32"]
resource_local_to_scene = true
shader = ExtResource("3_knrsg")
shader_parameter/rest_color = Color(1, 1, 1, 1)
shader_parameter/hover = false
shader_parameter/hover_color = Color(3.7542e-06, 0.636826, 0.789139, 1)
shader_parameter/stripe_attenuation = 0.1
shader_parameter/stripe_slope = 5.0
shader_parameter/stripe_count = 10
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nke1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cytil"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dujb6"]
resource_local_to_scene = true
shader = ExtResource("3_knrsg")
shader_parameter/rest_color = Color(1, 1, 1, 1)
shader_parameter/hover = false
shader_parameter/hover_color = Color(3.7542e-06, 0.636826, 0.789139, 1)
shader_parameter/stripe_attenuation = 0.1
shader_parameter/stripe_slope = 5.0
shader_parameter/stripe_count = 10
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qk0jq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 15

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_g56d2")
script = ExtResource("1_6qdly")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_7t0ji")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(960, 1080)
amount = 100
lifetime = 6.0
emission_shape = 3
emission_rect_extents = Vector2(960, 1)
gravity = Vector2(0, -80)
angular_velocity_min = 5.0
angular_velocity_max = 20.0
angle_min = -90.0
angle_max = 90.0
scale_amount_max = 4.0

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 50.0
offset_right = 1222.0
offset_bottom = 562.0
texture = ExtResource("8_2ncoh")

[node name="QuitButton" parent="." instance=ExtResource("3_1cpbu")]
material = SubResource("ShaderMaterial_v36sp")
layout_mode = 2
offset_left = 1800.0
offset_top = 30.0
offset_right = 1890.0
offset_bottom = 120.0
pivot_offset = Vector2(45, 45)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_vv21j")
theme_override_styles/hover = SubResource("StyleBoxFlat_vv21j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vv21j")
theme_override_styles/normal = SubResource("StyleBoxFlat_vv21j")
icon_texture = ExtResource("6_jf41c")
margin_h = 20
separation = 15
corner_radius = 50
shadow_size = 15

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 640.0
offset_top = -210.0
offset_right = 940.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_group_ = true

[node name="PlayButton" parent="VBoxContainer" instance=ExtResource("3_1cpbu")]
material = SubResource("ShaderMaterial_rmcal")
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_r2nyi")
theme_override_styles/hover = SubResource("StyleBoxFlat_r2nyi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r2nyi")
theme_override_styles/normal = SubResource("StyleBoxFlat_r2nyi")
label = "PLAY"
icon_texture = ExtResource("5_jqi8r")
margin_h = 20
separation = 15
corner_radius = 25
shadow_size = 15

[node name="PlayBoardButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 650.0
offset_right = 1420.0
offset_bottom = 1010.0
theme_override_constants/separation = 40
alignment = 1

[node name="Play console" parent="PlayBoardButtons" instance=ExtResource("3_1cpbu")]
material = SubResource("ShaderMaterial_tdt32")
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_4nke1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4nke1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4nke1")
theme_override_styles/normal = SubResource("StyleBoxFlat_4nke1")
margin_h = 20
separation = 15
corner_radius = 25
shadow_size = 15
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="PlayBoardButtons/Play console"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cytil")

[node name="TextureRect" type="TextureRect" parent="PlayBoardButtons/Play console/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_cnhpl")
expand_mode = 3
stretch_mode = 5

[node name="Play space_invaders" parent="PlayBoardButtons" instance=ExtResource("3_1cpbu")]
material = SubResource("ShaderMaterial_dujb6")
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_qk0jq")
theme_override_styles/hover = SubResource("StyleBoxFlat_qk0jq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qk0jq")
theme_override_styles/normal = SubResource("StyleBoxFlat_qk0jq")
margin_h = 20
separation = 15
corner_radius = 25
shadow_size = 15
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="PlayBoardButtons/Play space_invaders"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cytil")

[node name="TextureRect" type="TextureRect" parent="PlayBoardButtons/Play space_invaders/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_no14k")
expand_mode = 3
stretch_mode = 5

[connection signal="mouse_entered" from="QuitButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="PlayBoardButtons/Play console" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="PlayBoardButtons/Play space_invaders" to="." method="_on_button_mouse_entered"]
